--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@ body {
     font-size: 14px;
     font-weight: 400;
     line-height: 30px;
-    padding: 0 341px;
+    padding: 0 473px;
+    margin-bottom: 48px;
 }
 
 
@@ -87,7 +88,6 @@ main .section {
     display: flex;
     justify-content: center;
     gap: 24px;
-    margin-top: 48px;
 }
 
 .features {
@@ -146,7 +146,7 @@ main .section {
 .services-container {
     border-radius: 8px;
     background: rgba(39, 39, 39, 0.05);
-    padding: 86px 80px 87px 120px;
+    padding: 86px 200px 87px 160px;
     display: flex;
     justify-content: space-around;
 }
@@ -175,9 +175,11 @@ main .section {
     font-weight: 800;
     margin-bottom: 24px;
 }
-.offer-title span{
+
+.offer-title span {
     color: #E55473;
 }
+
 .offer-description {
     color: rgba(39, 39, 39, 0.60);
     font-size: 14px;
@@ -185,4 +187,36 @@ main .section {
     line-height: 30px;
     /* 166.667% */
     margin-bottom: 32px;
+}
+
+.social-photo-container img {
+    width: 342px;
+    height: 396px;
+}
+
+.social-photo-container .social-photo{
+    margin-left: 20px;
+}
+
+.email-section-container {
+    background-image: url('images/Rectangle\ 9.png');
+    background-repeat: no-repeat;
+    padding: 122px 0;
+
+}
+
+.email-section {
+    text-align: center;
+}
+
+.email-section input[type='email'] {
+    padding: 23px 513px 22px 22px;
+    border: none;
+    border-radius: 8px;
+    background: #FFF;
+}
+
+.email-section input[type='submit'] {
+    padding: 18px 31px;
+    margin-left: 16px;
 }
