--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /* Shared related styles */
+
 * {
     margin: 0;
     padding: 0;
@@ -26,11 +27,14 @@ body {
     margin-bottom: 48px;
 }
 
+/* header related styles */
 
 header {
     background-color: rgba(229, 84, 115, 0.10);
 
 }
+
+    /* banner related styles */
 
 .banner-container {
     display: flex;
@@ -82,7 +86,7 @@ main .section {
     margin: 128px auto;
 }
 
-/* Feature related section  */
+/* feature section related section  */
 
 .feature-photo-container {
     display: flex;
@@ -155,6 +159,8 @@ main .section {
     text-align: center;
 }
 
+/* offer section related styles */
+
 .offer {
     border-radius: 8px;
     background: rgba(229, 84, 115, 0.05);
@@ -185,7 +191,6 @@ main .section {
     font-size: 14px;
     font-weight: 400;
     line-height: 30px;
-    /* 166.667% */
     margin-bottom: 32px;
 }
 
@@ -194,9 +199,11 @@ main .section {
     height: 396px;
 }
 
-.social-photo-container .social-photo{
+.social-photo-container .social-photo {
     margin-left: 20px;
 }
+
+/* email section related styles */
 
 .email-section-container {
     background-image: url('images/Rectangle\ 9.png');
@@ -219,4 +226,40 @@ main .section {
 .email-section input[type='submit'] {
     padding: 18px 31px;
     margin-left: 16px;
+}
+
+/* footer related styles */
+
+footer {
+    background: #111010;
+}
+
+.footer-container {
+    text-align: center;
+    padding: 128px 704px;
+}
+
+.footer-title {
+    color: #E55473;
+    font-size: 38px;
+    font-weight: 800;
+    margin-bottom: 24px;
+}
+
+.footer-title span {
+    color: #FFF;
+}
+
+.footer-description {
+    color: rgba(255, 255, 255, 0.90);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 32px;
+}
+
+.copy {
+    color: rgba(255, 255, 255, 0.40);
+    font-size: 16px;
+    font-weight: 400;
 }
